--- a/package.json
+++ b/package.json
@@ -32,16 +32,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
