--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/akshaybhinge19/quick-cart/issues"
   },
-  "homepage": "https://github.com/akshaybhinge19/quick-cart",
+  "homepage": "https://akshaybhinge19.github.io/quick-cart",
   "devDependencies": {
     "parcel": "^2.12.0",
     "process": "^0.11.10"
